[package]
name = "osutil"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
color-eyre = "0.5"
clap = "3.0.0-beta.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.4.1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
xdg = "2.1"
